Update PEC1_SFE_Dustin_Randel_de_Lara_Garcia: Adjust date, enhance analysis, and add references
- Changed the date from 24 to 30 November 2025 in the PDF.
- Expanded the analysis section to highlight trends in parental involvement, including gender imbalance and home vs. school participation.
- Discussed implications for secondary education practice, emphasizing the need for inclusive communication strategies.
- Added a new reference entry for the cited book by Rodríguez Bravo and Donoso González.

--- a/PEC1_SFE_Dustin_Randel_de_Lara_Garcia/PEC1_SFE_Dustin_Randel_de_Lara_Garcia.tex
+++ b/PEC1_SFE_Dustin_Randel_de_Lara_Garcia/PEC1_SFE_Dustin_Randel_de_Lara_Garcia.tex
@@ -117,13 +117,14 @@ En mi caso envié el cuestionario a 3 padres de alumnos de Educación Secundaria
 
 \section{Análisis del informe general de datos}\label{sec:analisis-informe-general}
 \subsubsection*{¿Qué patrones o tendencias se observan en los datos recogidos sobre la implicación parental?}
-
+En los datos se observan tres tendencias claras. Primero, un fuerte desequilibrio de género: la mayoría de respuestas proceden de las madres, muy por encima de los padres y de otras figuras tutelares. Segundo, la implicación es elevada en el hogar, con frecuencia alta en supervisar deberes, controlar pantallas, organizar horarios, hablar sobre el día a día y el futuro académico. Tercero, la participación en el centro es mucho más limitada: se acude poco a actividades colectivas y la comunicación con el profesorado suele ser puntual, mayoritariamente no presencial y ligada a problemas concretos.
 \subsubsection*{¿Cómo se relacionan los resultados obtenidos con las teorías y modelos sobre la participación familiar en la educación?}
-
+El mayor peso de las madres confirma la persistencia de una división generizada del trabajo familiar, en línea con los análisis sobre conciliación. La alta implicación en casa encaja con el ámbito de “learning at home” del modelo de Epstein y con la parentalidad positiva, centrada en apoyo y acompañamiento cotidiano. En cambio, la escasa presencia en el centro y una comunicación sobre todo reactiva sitúan a muchas familias en una participación básicamente informativa, más que decisoria o evaluativa, próxima a metas de logro parental orientadas a evitar el fracaso.
 \subsubsection*{¿Qué implicaciones tienen los datos para la práctica docente en educación secundaria?}
-
+Los datos tienen varias implicaciones para la práctica docente en secundaria. Primero, obligan a tener en cuenta la sobrecarga de las madres y la persistencia de una división generizada de los cuidados, por lo que el profesorado debería diversificar horarios, canales y mensajes para implicar también a padres y otras figuras familiares. Segundo, muestran que la relación con las familias se mantiene en un nivel principalmente informativo y reactivo. Por tanto, conviene diseñar proyectos y espacios estables (reuniones, comisiones mixtas) que refuercen la participación decisoria y evaluativa que Includ-ed vincula al éxito escolar. Finalmente, orientan la acción docente hacia una comunicación más preventiva, continua y bidireccional.
 \subsubsection*{¿De qué modo podrían los futuros docentes favorecer una mayor colaboración y comunicación con las familias desde su función profesional?}
+Para favorecer una mayor colaboración, los futuros docentes deberían tratar a las familias como aliadas educativas, no solo como receptoras de información. Esto implica pasar de un contacto reactivo a una comunicación preventiva y continua: tutorías planificadas, mensajes breves y claros, uso razonable de plataformas digitales y devoluciones periódicas sobre el progreso. Siguiendo propuestas como las de Epstein o Includ-ed, pueden abrir espacios en los que las familias opinen y evalúen aspectos de la vida escolar, y no solo reciban información. Finalmente, es importante tener en cuenta la desigual distribución de los cuidados y ofrecer horarios y formatos flexibles que faciliten la participación de todos los miembros de la familia.
 
-\newpage
+\nocite{rodriguez_bravo_sociedad_2025}
 \printbibliography
 \end{document}
