--- a/PEC1_SFE_Dustin_Randel_de_Lara_Garcia/referencias.bib
+++ b/PEC1_SFE_Dustin_Randel_de_Lara_Garcia/referencias.bib
@@ -1,9 +1,9 @@
 % Ejemplo de cita de una web online
-@online{LODE1985,
-  title   = {Ley Orgánica 8/1985, de 3 de julio, reguladora del Derecho a la Educación (LODE)},
-  year    = {1985},
-  date    = {1985-07-04},
-  note    = {BOE núm. 159},
-  url     = {https://www.boe.es/buscar/act.php?id=BOE-A-1985-12978},
-  urldate = {2025-11-08}
+@book{rodriguez_bravo_sociedad_2025,
+  author    = {Rodríguez Bravo, Ana Eva and Donoso González, Macarena},
+  year      = {2025},
+  title     = {Sociedad, familia y educación},
+  publisher = {UNED},
+  location  = {Madrid, España},
+  isbn      = {9788436253894}
 }
