Add images and enhance document content: include contributions and reviews from peers with corresponding figures in the seminar document.

--- a/PEC1_SFE_Dustin_Randel_de_Lara_Garcia/PEC1_SFE_Dustin_Randel_de_Lara_Garcia.tex
+++ b/PEC1_SFE_Dustin_Randel_de_Lara_Garcia/PEC1_SFE_Dustin_Randel_de_Lara_Garcia.tex
@@ -124,7 +124,36 @@ El mayor peso de las madres confirma la persistencia de una división generizada
 Los datos tienen varias implicaciones para la práctica docente en secundaria. Primero, obligan a tener en cuenta la sobrecarga de las madres y la persistencia de una división generizada de los cuidados, por lo que el profesorado debería diversificar horarios, canales y mensajes para implicar también a padres y otras figuras familiares. Segundo, muestran que la relación con las familias se mantiene en un nivel principalmente informativo y reactivo. Por tanto, conviene diseñar proyectos y espacios estables (reuniones, comisiones mixtas) que refuercen la participación decisoria y evaluativa que Includ-ed vincula al éxito escolar. Finalmente, orientan la acción docente hacia una comunicación más preventiva, continua y bidireccional.
 \subsubsection*{¿De qué modo podrían los futuros docentes favorecer una mayor colaboración y comunicación con las familias desde su función profesional?}
 Para favorecer una mayor colaboración, los futuros docentes deberían tratar a las familias como aliadas educativas, no solo como receptoras de información. Esto implica pasar de un contacto reactivo a una comunicación preventiva y continua: tutorías planificadas, mensajes breves y claros, uso razonable de plataformas digitales y devoluciones periódicas sobre el progreso. Siguiendo propuestas como las de Epstein o Includ-ed, pueden abrir espacios en los que las familias opinen y evalúen aspectos de la vida escolar, y no solo reciban información. Finalmente, es importante tener en cuenta la desigual distribución de los cuidados y ofrecer horarios y formatos flexibles que faciliten la participación de todos los miembros de la familia.
+\subsubsection*{Reseña propia y comentarios a las aportaciones de 2 compañeros}
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=1\textwidth]{reseña_propia.png}
+  \caption{Reseña propia en el foro UNED.}
+\end{figure}
 
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=1\textwidth]{Reseña_Seila.png}
+  \caption{Reseña Seila en el foro UNED.}
+\end{figure}
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=1\textwidth]{Reseña_Francisco.png}
+  \caption{Reseña Francisco en el foro UNED.}
+\end{figure}
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=1\textwidth]{Aportacion_1.png}
+  \caption{Aportación 1 a la reseña de Seila.}
+\end{figure}
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=1\textwidth]{Aportacion_2.png}
+  \caption{Aportación 1 a la reseña de Francisco.}
+\end{figure}
 \nocite{rodriguez_bravo_sociedad_2025}
 \printbibliography
 \end{document}
