Refactor LaTeX document: Update figure captions for clarity, modify file paths in .fdb_latexmk, and add signed PDF version of the document.

--- a/PEC1_SFE_Dustin_Randel_de_Lara_Garcia/PEC1_SFE_Dustin_Randel_de_Lara_Garcia.tex
+++ b/PEC1_SFE_Dustin_Randel_de_Lara_Garcia/PEC1_SFE_Dustin_Randel_de_Lara_Garcia.tex
@@ -134,13 +134,13 @@ Para favorecer una mayor colaboración, los futuros docentes deberían tratar a 
 \begin{figure}[H]
   \centering
   \includegraphics[width=1\textwidth]{Reseña_Seila.png}
-  \caption{Reseña Seila en el foro UNED.}
+  \caption{Reseña de Seila en el foro UNED.}
 \end{figure}
 
 \begin{figure}[H]
   \centering
   \includegraphics[width=1\textwidth]{Reseña_Francisco.png}
-  \caption{Reseña Francisco en el foro UNED.}
+  \caption{Reseña de Francisco en el foro UNED.}
 \end{figure}
 
 \begin{figure}[H]
