Add initial seminar document and related files
- Created a new LaTeX document for "Seminario III - Cómo aprenden y cómo son. Concepciones y creencias de los docentes sobre los alumnos".
- Added sections for "Actividad 1" and "Actividad 4" with relevant content.
- Included a table of contents and updated metadata in the LaTeX preamble.
- Generated output files: PDF, .out, .toc, .run.xml, and .synctex.gz for the seminar document.

--- a/Seminario3_Dustin_Randel_de_Lara_Garcia/Seminario3_Dustin_Randel_de_Lara_Garcia.tex
+++ b/Seminario3_Dustin_Randel_de_Lara_Garcia/Seminario3_Dustin_Randel_de_Lara_Garcia.tex
@@ -46,8 +46,8 @@
 \usepackage{hyperref}
 \hypersetup{
   pdfauthor={Dustin Randel De Lara García},
-  pdftitle={Recopilación de normativa educativa},
-  pdfkeywords={LOE, LOMLOE, currículo, Illes Balears},
+  pdftitle={Seminario III - Cómo aprenden y cómo son. Concepciones y creencias de los docentes sobre los alumnos},
+  pdfkeywords={Seminario III, Máster en Formación del Profesorado, UNED, Educación},
   colorlinks=true,
   linkcolor=verdeFresco,
   urlcolor=verdeFresco,
@@ -60,7 +60,7 @@
 % ---- Encabezados/pies
 \pagestyle{fancy}
 \rhead{UNED}
-\lhead{Seminario I - Recopilación de Normativa Educativa} 
+\lhead{Seminario III - Cómo aprenden y cómo son. Concepciones y creencias sobre los alumnos} 
 \cfoot{\thepage}
 
 \date{\today}
@@ -79,9 +79,9 @@
   \vspace{0.5cm}
   {\scshape\Large Prácticum \par}
   \vspace{1.5cm}
-  {\scshape\Huge Recopilación de normativa educativa \par}
+  {\scshape\Huge Cómo aprenden y cómo son. Concepciones y creencias de los docentes sobre los alumnos \par}
   \vspace{1.5cm}
-  {\itshape\Large Seminario I \par}
+  {\itshape\Large Seminario III \par}
   \vfill
   {\Large Dustin Randel De Lara García \par}
   \vfill
@@ -94,9 +94,14 @@
 \tableofcontents
 \newpage
 
-\section{Objetivos}\label{sec:objetivos}
-
-\section{Sección 1 ...}\label{sec:section-1}
+\section{Actividad 1}\label{sec:actividad1}
+\subsection{Sobre bilingüismo}
+\begin{enumerate}
+  \item "Una segunda lengua hay que aprenderla cuando se haya aprendido bien la lengua materna"
+  \item "Es beneficioso aprender dos lenguas simultáneamente"
+\end{enumerate}
+ 
+\section{Actividad 4}\label{sec:actividad2}
 
 \newpage
 \printbibliography
