Add references for educational processes and contexts in secondary education
- Created a new bibliography file with 13217 lines of references.
- Included books, articles, and legislation related to tutoring and educational practices in secondary education.
- References cover various aspects such as communication, conflict resolution, and inclusion in the classroom.

--- a/Seminario3_Dustin_Randel_de_Lara_Garcia/Seminario3_Dustin_Randel_de_Lara_Garcia.tex
+++ b/Seminario3_Dustin_Randel_de_Lara_Garcia/Seminario3_Dustin_Randel_de_Lara_Garcia.tex
@@ -25,6 +25,7 @@
 \usepackage{fancyhdr}
 \setlength{\headheight}{14pt}
 \usepackage{csquotes}
+\usepackage{enumitem}
 \usepackage{parskip}   % separa párrafos sin sangría
 \usepackage{array,longtable}
 \renewcommand{\arraystretch}{1.4}
@@ -96,13 +97,91 @@
 
 \section{Actividad 1}\label{sec:actividad1}
 \subsection{Sobre bilingüismo}
-\begin{enumerate}
-  \item "Una segunda lengua hay que aprenderla cuando se haya aprendido bien la lengua materna"
-  \item "Es beneficioso aprender dos lenguas simultáneamente"
+\begin{enumerate}[label=\alph*)]
+  \item ``Una segunda lengua hay que aprenderla cuando se haya aprendido bien la lengua materna''
+  \item ``Es beneficioso aprender dos lenguas simultáneamente''
 \end{enumerate}
- 
-\section{Actividad 4}\label{sec:actividad2}
+\subsubsection*{Creencias sobre el bilingüismo}
+
+En mis hipótesis iniciales defendía que es beneficioso aprender varias lenguas simultáneamente desde la niñez. Basaba esta idea en mi propia experiencia: crecí expuesto a cuatro lenguas (castellano, catalán, inglés y filipino) sin notar retrasos en el desarrollo del lenguaje, sino más bien lo contrario. También pensaba que, si un alumno bilingüe presenta dificultades lingüísticas, éstas aparecerían igualmente aunque sólo hablara una lengua, de modo que como docente tendría sentido mantener ambas lenguas y ofrecer apoyos específicos, en lugar de eliminar una de ellas.
+
+\subsubsection*{¿Mis hipótesis se confirman? ¿Sólo en parte?}
+
+En términos generales, las lecturas confirman buena parte de mis intuiciones. El artículo divulgativo \emph{El cerebro bilingüe} (Costa, Hernández y Baus, 2015) muestra que los niños expuestos a dos lenguas desde muy pequeños son capaces de diferenciarlas y que su desarrollo lingüístico no presenta retrasos destacables respecto a los monolingües (p.~35). De forma complementaria, la revisión de \emph{Orientaciones para la intervención logopédica con niños bilingües} (Nieva, 2015) subraya que las investigaciones recientes destacan el bilingüismo como una opción que beneficia el desarrollo del lenguaje y de la cognición, reforzando mi idea de partida de que el bilingüismo temprano no “confunde” al niño, sino que puede asociarse a ventajas importantes.
+
+\subsubsection*{¿En qué aspectos la información de los artículos contradice mis hipótesis?}
+
+Donde los artículos contradicen más mis creencias es en la idea de que el bilingüismo son “todo ventajas”. Costa, Hernández y Baus (2015) insisten en que el bilingüismo conlleva costes y beneficios, como dos caras de una misma moneda (p.~34). Entre los “costes” mencionan que los bilingües, en comparación con los monolingües, pueden ser algo más lentos al acceder a ciertas palabras y tener más situaciones de “en la punta de la lengua” incluso en su lengua dominante (p.~39, \emph{El cerebro bilingüe}). Además, señalan que no todos los estudios encuentran siempre ventajas cognitivas claras. Nieva (2015) también insiste en la necesidad de interpretar con prudencia los resultados sobre funciones ejecutivas y reserva cognitiva (p.~88–89). Yo tendía a pensar en el bilingüismo de manera casi exclusivamente positiva y estos matices me obligan a reconocer que también implica ciertos esfuerzos adicionales para el sistema cognitivo y que los efectos beneficiosos pueden depender del tipo de bilingüismo y del contexto.
+
+\subsubsection*{¿Ha cambiado mi perspectiva sobre el tema? ¿Por qué?}
+
+Mi perspectiva ha cambiado en el sentido de volverse más compleja y menos ingenuamente optimista. Sigo viendo el bilingüismo infantil como algo muy positivo, pero ahora lo entiendo como un fenómeno que implica gestionar dos sistemas lingüísticos con algunos pequeños costes (por ejemplo, un acceso léxico algo más lento) y beneficios importantes a lo largo de la vida. 
+
+El artículo \emph{El cerebro bilingüe} explica que la necesidad constante de controlar dos lenguas parece fortalecer ciertas funciones ejecutivas y que en algunos estudios se ha observado un retraso de varios años en la aparición de síntomas de demencia en personas bilingües (p.~40), aunque se advierte que estos resultados deben interpretarse con cautela. La revisión de Nieva (2015) refuerza esta idea al destacar beneficios cognitivos y sociales (mayor conciencia fonológica, flexibilidad y apertura cultural, mejores oportunidades de adaptación y trabajo; p.~88–89), pero también al recordar que no todos los contextos bilingües son iguales y que hay factores sociales y educativos que pueden influir en los resultados.
+
+\subsubsection*{Lo que ahora conozco a través de un conocimiento experto ¿cambia mi opinión sobre el bilingüismo en la educación? ¿O la confirma?}
+
+El conocimiento experto no cambia el sentido de fondo de mi opinión sobre el bilingüismo en la educación, pero sí la hace más sólida. Sigo pensando que es deseable promover el bilingüismo y mantener la lengua familiar del alumnado, también cuando presenta dificultades del habla o del lenguaje. En este punto, la revisión de Nieva (2015) confirma claramente mi intuición: explica que aprender más de una lengua no dificulta el desarrollo más allá de las propias dificultades del niño y que puede adquirir una competencia funcional en ambas lenguas dentro de los límites de su alteración (p.~98), por lo que recomienda informar a las familias de los beneficios socioculturales y emocionales de mantener las dos lenguas. Además, se critica la práctica, poco fundamentada, de aconsejar a las familias que usen sólo una lengua (p.~90). A la luz de estos datos, mi postura sigue siendo favorable al bilingüismo, pero ahora evitando mensajes simplistas del tipo “los bilingües son más inteligentes” y prestando atención a las condiciones concretas (tipo de bilingüismo, exposición, apoyo escolar y logopédico) que permiten que sus beneficios se materialicen en la práctica educativa.
+
+\subsection{Sobre los deberes}
+En cada una de las preguntas comentaré primero mis propias ideas y, después, las contrastaré con la investigación educativa proporcionada por la plataforma Ágora.
+
+\subsubsection*{¿Qué aportan los deberes a los objetivos educativos?}
+
+Desde mis creencias actuales, los deberes son una herramienta para aplicar los conocimientos vistos en clase y consolidarlos. Entiendo que ayudan a desarrollar autonomía, disciplina, capacidad de organización y constancia, además de permitir detectar qué partes de la materia no se han entendido bien. Los considero algo prácticamente necesario, siempre que no se conviertan en una carga excesiva que sólo genere cansancio y rechazo.
+
+Al contrastar estas ideas con la investigación, el artículo de Parra González y Sánchez Núñez (2018) confirma en buena medida esta visión. Las autoras señalan que la finalidad más común de los deberes es ofrecer una oportunidad de práctica y repaso de los contenidos trabajados en clase, pero también pueden servir para presentar material que se explicará más adelante o como extensión de lo ya trabajado (p.~48). Además, recogen finalidades no estrictamente académicas, como favorecer la autorregulación, la organización del tiempo, la confianza y la relación entre la escuela y la familia (p.~48–49), que conectan con mi idea de que los deberes contribuyen también a objetivos formativos más amplios.
+
+\subsubsection*{¿Qué efecto tiene sobre el rendimiento académico?}
+
+Mi hipótesis inicial es que, en general, cuantos más deberes hace el alumnado (bien planteados y razonables), mejor rendimiento obtiene, porque se enfrenta a más situaciones y problemas, lo que facilita el reconocimiento de patrones y la transferencia a tareas nuevas. Sin embargo, imagino este efecto como una especie de curva logarítmica: a partir de cierto punto, seguir aumentando la cantidad de deberes deja de aportar beneficios e incluso puede volverse contraproducente.
+
+Los estudios analizados muestran un panorama más complejo, pero en buena medida compatible con esta intuición. Parra González y Sánchez Núñez (2018) encuentran que hacer deberes con mayor frecuencia se asocia a mejores calificaciones en las distintas asignaturas, mientras que no aparece una relación clara entre dedicar más tiempo a los deberes y obtener mejores notas (p.~46–47, p.~51–53). En sus conclusiones señalan, además, que en Ciencias Naturales y Sociales llegan a observar mejores resultados cuando no hay demasiados deberes, relacionándolo con un posible “efecto de saciación”: el exceso de tareas puede disminuir el interés y aumentar el cansancio (p.~55–56).
+
+Por su parte, Valle et al.\ (2018) muestran, con alumnado de Educación Secundaria, que los niveles más altos de rendimiento académico se asocian con una mayor cantidad de deberes realizados, más tiempo dedicado a ellos y un mejor aprovechamiento de ese tiempo en Matemáticas, Lengua Castellana y Lengua Inglesa (p.~24–27). En su discusión concluyen que existe una asociación positiva entre hacer los deberes y el rendimiento, pero subrayan también que la relación con el tiempo no es lineal y que depende de cómo se gestione ese tiempo y de la eficiencia del alumno (p.~28–29). En conjunto, los datos refuerzan la idea de que los deberes pueden mejorar el rendimiento, pero que no basta con “más cantidad”: importan la frecuencia, el esfuerzo y la calidad del trabajo.
+
+\subsubsection*{¿Este efecto puede variar según el tipo de asignatura?}
+
+Desde mi experiencia como estudiante y futuro docente, tiendo a pensar que los deberes son especialmente útiles en asignaturas de carácter más procedimental, como Física y Química o Matemáticas, donde es clave resolver problemas y aplicar fórmulas a situaciones distintas. En el caso de las lenguas o de materias más teóricas como Historia, soy más escéptico con las tareas centradas sólo en memorizar. En cambio, sí veo muy valiosos los ejercicios de lectura, redacción, comprensión de textos, ortografía o sintaxis.
+
+Los datos empíricos apuntan a que la relación entre deberes y rendimiento no es idéntica en todas las materias. En el estudio de Parra González y Sánchez Núñez (2018), por ejemplo, al analizar la frecuencia de deberes y las calificaciones mediante ANOVA, encuentran que en Lengua, Matemáticas e Inglés no siempre aparecen diferencias estadísticamente significativas en función de la frecuencia, mientras que en Ciencias Naturales y Sociales llegan a observar, en algunos análisis, mejores notas cuando no hay deberes o sólo algunos días (p.~51). Sin embargo, cuando se consideran de forma conjunta distintas variables (frecuencia, dificultad, esfuerzo, condiciones de estudio), se confirma una relación positiva entre hacer deberes y rendimiento en todas las áreas, especialmente si el alumnado dispone de buenas condiciones y hábitos lectores (p.~52).
+
+Valle et al.\ (2018) analizan por separado Matemáticas, Lengua Castellana y Lengua Inglesa y encuentran un patrón bastante consistente: el alumnado con mejores notas realiza más deberes, aprovecha mejor el tiempo y, en algunos casos, también dedica más tiempo que quienes obtienen calificaciones más bajas (p.~24–27). Esto sugiere que la fuerza de la asociación puede variar entre materias, pero que, al menos en estas asignaturas troncales, la implicación en los deberes se relaciona de forma similar con el rendimiento.
+
+\subsubsection*{¿Este efecto puede variar según el tipo de deberes (repaso, proyectos, indagación, etc.)?}
+
+A nivel personal, valoro especialmente los deberes que implican aplicar la teoría a problemas reales, realizar proyectos, hacer pequeñas investigaciones o lecturas significativas. Me parecen menos útiles las tareas puramente mecánicas y repetitivas que no añaden comprensión, más allá de cierta práctica básica necesaria.
+
+El estudio de Parra González y Sánchez Núñez (2018) ofrece algunos matices interesantes sobre el tipo de tarea. Al analizar los cinco tipos de deberes más habituales, concluyen que cuando las tareas consisten en “estudiar o repasar” lo trabajado, el alumnado que declara tener este tipo de deberes “siempre” o “la mayoría de los días” obtiene mejores resultados en todas las asignaturas (p.~54). En cambio, los deberes del tipo “terminar la tarea que no dio tiempo en clase” sólo se relacionan con mejores notas en Ciencias Sociales, y otros tipos, como “practicar lo aprendido en clase”, “lectura” o “buscar o ampliar información en internet”, no muestran una relación clara y consistente con el rendimiento (p.~57–58).
+
+En los datos de Valle et al.\ (2018) no se diferencia por tipos concretos de tareas, sino por cantidad, tiempo y aprovechamiento del tiempo. Aun así, ambos trabajos, tomados en conjunto, me hacen pensar que los deberes más efectivos no son necesariamente los más vistosos o complejos, sino aquellos que ayudan a estudiar y repasar de forma estructurada y asumible.
+
+\subsubsection*{¿Qué elementos crees que influyen para que los deberes sean efectivos? (el tiempo dedicado, la cantidad, la metodología, la edad o etapa educativa en la que se incluyen, etc.)}
+
+Según mis creencias, la efectividad de los deberes depende de varios factores: que la cantidad sea razonable (por ejemplo, unos pocos ejercicios bien escogidos que se puedan completar en 20–30 minutos por materia), que haya regularidad sin saturar, que las tareas tengan sentido respecto a lo trabajado en clase y que el profesorado ofrezca un buen feedback, explicando qué está bien, qué no y cómo se podría haber enfocado de otra manera. También considero importante adaptar la exigencia a la etapa educativa y tener en cuenta el contexto familiar y el tiempo real del que dispone el alumnado.
+
+Los estudios revisados confirman que los deberes forman parte de un fenómeno complejo en el que intervienen múltiples variables. Parra González y Sánchez Núñez (2018) muestran que el rendimiento se relaciona con la frecuencia con la que se hacen los deberes, con el esfuerzo que el alumnado declara dedicarles, con que las tareas tengan un nivel de dificultad asumible, con disponer de condiciones óptimas para estudiar (mesa, luz, poco ruido) y con el hecho de no invertir un tiempo excesivo que pueda ser síntoma de dificultades o de distracciones (p.~49–54). También señalan que dedicar más horas no garantiza mejores resultados y que un exceso de deberes puede provocar saturación y desmotivación (p.~55).
+
+Valle et al.\ (2018), por su parte, destacan el papel del aprovechamiento del tiempo: el alumnado con mayor rendimiento no sólo hace más deberes, sino que gestiona mejor el tiempo que les dedica, mostrando niveles más altos de autorregulación (p.~22–27). En sus implicaciones educativas proponen que la prescripción de deberes tenga en cuenta los intereses, conocimientos y competencias de cada estudiante, advirtiendo que diseñar la misma cantidad y dificultad para todos puede perjudicar especialmente a quienes tienen peor rendimiento o mayores dificultades (p.~29).
+
+En conjunto, la investigación refuerza mi intuición de que los deberes serán más efectivos cuando se combinan una cantidad moderada y bien planificada, tareas ajustadas al nivel del alumnado, buenas condiciones de estudio, un uso eficiente del tiempo y un feedback docente que ayude a transformar la práctica en aprendizaje real.
 
 \newpage
-\printbibliography
+\section{Actividad 4}\label{sec:actividad2}
+Al inicio de esta actividad se me pidió que activara mis ideas y creencias sobre la adolescencia. Sin pensarlo demasiado, las cinco palabras que escribí fueron: curioso, inocente, sabelotodo, salvaje, desagradecido. Esa combinación ya refleja un punto de vista bifurcado: por un lado, reconozco la curiosidad y cierta ingenuidad propia de la edad. Por otro, aflora una visión algo crítica, que asocia la adolescencia con rebeldía descontrolada y falta de gratitud. A partir de ahí, elaboré una especie de “foto mental” del adolescente actual: muy expuesto a sustancias, atrapado en las pantallas, en conflicto con el profesorado y nunca satisfecho con su vida.
+
+En relación con el consumo de sustancias, mis hipótesis eran claras. Pensaba que el alcohol se mantenía muy extendido y que, en particular, los chicos bebían más que las chicas para ganar confianza y ligar. Imaginaba que las borracheras eran algo casi normalizado y que el cannabis se había popularizado enormemente, en parte por la influencia cultural de otros países. Al mismo tiempo, creía que el tabaco tradicional había caído en picado, sustituido por los cigarrillos electrónicos, que veía como una alternativa muy presente entre los adolescentes.
+
+Al contrastar estas ideas con los datos del vídeo e informe HBSC 2022, mi percepción se ha transformado. Es cierto que el consumo de alcohol y otras sustancias sigue existiendo y no es un fenómeno marginal, pero los datos muestran que una parte muy importante de los adolescentes no bebe, no fuma ni consume cannabis de forma habitual. Además, las diferencias de género no son tan extremas como yo suponía, pero siguen estando levemente presentes (los chicos beben ligeramente más que las chicas). También he descubierto que, aunque el vapeo aparece como una práctica emergente, sigue siendo minoritaria y no ha desplazado completamente al tabaco tradicional. Mi reformulación aquí consiste en dejar de pensar en la adolescencia como un bloque homogéneo de “consumidores en potencia” y empezar a ver la diversidad de trayectorias: una mayoría que no consume o lo hace de forma esporádica, una minoría en riesgo y, dentro de esa minoría, diferencias ligadas a edad, género y contexto social.
+
+Algo parecido me ha ocurrido con el bullying y el ciberbullying. Antes de ver los datos, daba por hecho que el ciberacoso era muy frecuente, casi inevitable en un mundo de redes sociales, videojuegos en línea y anonimato. Además, pensaba que el aumento de la visibilidad de identidades no normativas (por ejemplo, alumnado LGTBI) implicaba automáticamente más situaciones de rechazo y violencia. El informe, sin negar la gravedad del acoso, ofrece una imagen más compleja: la mayoría del alumnado no está implicada en episodios de bullying o ciberbullying de forma reiterada, aunque existe una minoría que sí sufre o ejerce estas conductas. Esto me ha obligado a ajustar mi mirada: el problema es serio y requiere intervención, pero no puedo partir de la idea de que “todos” los adolescentes son agresores en potencia ni de que el entorno digital sea únicamente un espacio de hostilidad.
+
+En cuanto a la relación con la escuela y el profesorado, mis creencias previas eran bastante pesimistas. Imaginaba a muchos adolescentes convencidos de que los profesores están “en su contra”, y pensaba que la escuela les gustaba menos ahora que hace décadas, entre otras cosas por la competencia de las pantallas, las redes sociales y la gratificación inmediata. Sin embargo, la investigación muestra que una parte importante del alumnado declara que la escuela le gusta al menos en cierto grado y que la relación con el profesorado suele valorarse de forma razonablemente positiva, aunque esa satisfacción desciende a medida que aumenta la edad. Esto me ha hecho darme cuenta de que mi visión estaba muy marcada por discursos adultos y mediáticos que tienden a enfatizar el conflicto. Como futuro docente, me resulta más útil partir de la idea de que la relación profesor–alumno es ambivalente, pero no necesariamente hostil, y que hay margen de maniobra para reforzar los vínculos positivos.
+
+Donde más se han removido mis creencias ha sido en el terreno de la salud mental y el bienestar. Yo ya intuía que los adolescentes podían estar especialmente expuestos a problemas de ansiedad, estrés y malestar emocional, y que la hiperconexión digital no ayudaba. La lectura del informe y visionado del vídeo confirma que los síntomas de malestar psicosomático y el estrés por el trabajo escolar están muy presentes en una parte significativa del alumnado, pero añade un matiz clave que yo no tenía suficientemente en mente: las enormes diferencias de género. Las chicas aparecen sistemáticamente con peores indicadores de bienestar, más síntomas y menor satisfacción con la vida que los chicos, y esta brecha se agranda con la edad. Mi idea inicial de que “chicos y chicas están igual de mal” ha tenido que reformularse: no solo hay un problema general de malestar juvenil, sino que además se distribuye de manera desigual, afectando más a ciertos grupos.
+
+En conjunto, el proceso de confrontar mis ideas con la investigación me ha obligado a pasar de una mirada simplificadora a una más analítica. Sigo viendo riesgos reales (consumo de sustancias, acoso, estrés, problemas de salud mental), pero ahora soy más consciente de que no se puede hablar “de los adolescentes” en bloque. Hay mayorías silenciosas que no encajan en los clichés que yo manejaba, minorías en situación de especial vulnerabilidad y desigualdades claras ligadas al género y al contexto socioeconómico.
+
+Como futuro profesor, este ejercicio me deja dos aprendizajes fundamentales. El primero es la necesidad de poner entre paréntesis mis prejuicios y apoyarme en datos antes de generalizar sobre mi alumnado. Lo que en mi cabeza aparecía como un conocimiento evidente sobre “cómo son los adolescentes” ha resultado ser, en parte, una mezcla de estereotipos y experiencias parciales. El segundo es la importancia de mirar a la adolescencia con una doble lente: por un lado, detectando y abordando los riesgos y el malestar. Por otro, reconociendo las capacidades, la curiosidad y la voluntad de construir su identidad que también estaban presentes en mis primeras palabras, aunque quedaran algo ensombrecidas. Creo que esta reformulación de mis creencias es un paso necesario para poder acompañar de forma más justa y eficaz a mis futuros estudiantes.
+
 \end{document}
